src/style/style.css
* {
    margin: 0%;
    padding: 0%;
    font-size: 16px;
    font-family: work-sans;
    margin-left: 0%;
}

/* p {
    gap: 5px;
} */

body {
    /* width: 100%; */
    background-color: whitesmoke;
    position: relative;
}

input, textarea {
    padding: 1vw;
    background-color: whitesmoke;
    border: solid black 1px;
}

input {
    width: calc((50vw / 2));
}

textarea {
    width: calc(50vw * 0.66);
}

ul {
    list-style: none;
}

#header, 
#header > div, 
nav > ul {
    display: flex;
    flex-direction: row;
}

section ,footer {
    padding: 1.75vw;
    /* padding-top: 2vw; */
    /* padding-right: 2vw; */
    /* width: 100%; */
}

section > h2 {
    font-size: 6vw;
    font-weight: bolder;
    margin-bottom: 2vw;
}

#about, #resume, #projects, #contact {
    margin-top: 15vh;
}


/* header styling */

#header {
    justify-content: space-between;
    align-self: center;
    position:fixed;
    top: 0%;
    width: 94%;
    z-index: 1;
    background-color: whitesmoke;
}

#header > div {
    gap: 1vw;
    justify-content: center;
    align-items: center; 
}

#header > div > img {
    height: 40px;
    width: 40px;
    border-radius: 40px;
    object-fit: cover;
}

#header p:nth-child(2) {
    font-weight: bold;
    font-size: 19px;
    cursor: pointer;
}

#header p:nth-child(2):hover {
    color: brown;
}

nav > ul :nth-child(2) {
    border-left: solid black 1px;
    border-right: solid black 1px;
}

nav > ul > li {
    padding: 10px;
    cursor: pointer;
    font-weight: lighter;
}

nav > ul > li:hover {
    color: brown;
}

#header > img {
    width: 30px;
    height: 30px;
    /* border: solid black 1px; */
    display: none;
    margin-left: 50px;
}

/*About section styling*/

#about {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 30px;
    /* max-width: 70vw; */
    /* height: 70vh; */
}

#about > img {
    height: 480px;
    width: 480px;
    border-radius: 50%;
    justify-self: center;
    object-fit: cover;
}

#about > div > h1 {
    /* font-size: 10vw; */
    font-size: clamp(100px, 10vw, 12vw);
    padding-bottom: 20px;
}

#about > div > p{
    padding-left: 10px;
}

#about > div p:nth-child(2){
    font-weight: bold;
    font-size: 3vw;
    font-size: clamp(18px, 2vw, 8vw);
}

#about > div > div {
    display: flex;
    flex-direction: row;
    margin-top: 3vw;
    gap: 1vw;
}

#about > div > div button:first-child {
    background-color: #EEA302;
}

#about > div > div button:last-child {
    background-color: #80d8da;
}

#about > div > div button:nth-child(2) {
    background-color: #ff3b25;
}

button {
    border-radius: 50%;
    height: 140px;
    width: 140px;
    font-weight: 800;
    border: solid black 0.5px;
    font-size: x-large;
    cursor: pointer;
}

#about > div > div button:hover,
form button:hover {
    background-color: white;
}

/*projects styling*/
.project {
    display: grid;
    grid-template-columns: 1fr 1fr;
    margin-top: 5vh;
    gap: 5vw;
}

.project > div > h2 {
    margin-bottom: 20px;
    font-weight: bolder;
}

.project > img {
    height: 30vw;
    width: calc(50vw - 3vw - 5vw);
    object-fit: cover;
}

#resume {
    display: flex;
    flex-direction: column;
    gap: 30px;
}

#resume > div {
    display: grid;
    grid-template-columns: 1fr 1fr;
}

#resume > div > h3 {
    font-size: xx-large;
    font-weight: bold;
}

.separation {
    border-bottom: solid black 1px;
}

#skills > ul {
    list-style:square;
    display: grid;
    grid-template-columns: 1fr 2fr;
}

#skills > ul > li {
    padding: 6px;
    grid-column-start: 2;
}

.resumeItem {
    display: grid;
    grid-template-columns: 1fr 2fr;
    margin-bottom: 3vw;
    gap: 2vw;
}

.position {
    font-weight: bolder;
}

.description {
    grid-row-start: 2;
    grid-column-start: 2;
    margin-top: 10px;
}

/*contact styling*/
#contact {
    display: flex;
    flex-direction: column;
    /* height: 70vh; */
    margin-bottom: 10vh;
}

#contact > div {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 2vw;
}

#contact > div > div > div {
    margin-top: 30px;
}

#contact > div > div > div :first-child {
    font-weight: bolder;
}

form div:first-child {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 10px;
}

form div:first-child > div {
    display: flex;
    flex-direction: column;
    gap: 5px;
}

#message > div {
    display: flex;
    flex-direction: column;
}

#message {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    gap: 20px;
    margin-top: 20px;
}

form button {
    background-color: orange;
}

/*footer styling*/
footer {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items:stretch;
    /* margin-bottom: 100px; */
    margin-top: 50px;
    gap: 20px;
    border-top: solid black 1px;
    margin-left: 3vw;
    margin-right: 3vw;
    padding-top: 30px;
}

footer > div > p:first-child {
    font-weight: bolder;
}

footer > div > p {
    padding: 3px;
}

#followMe > div {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    gap: 15px;
    padding-left: 5px;
}

footer > div:last-child > p {
    font-weight: lighter;
    font-size: smaller;
}

footer > div:last-child > p:last-child,
footer > div:last-child > p:last-child > a {
    font-size: x-small;
}

#resume, #projects, #contact {
    display: none;
}

menu {
    width: 100vw;
    overflow: hidden;
    height: 0; 
    position: fixed; 
    /* background-color: black; */
    z-index: 1;
    top: 0;
    left: 0;
    display: flex;
    justify-content: flex-end;
}

menu > div {
    display: grid;
    grid-template-rows: 1fr 9fr;
    background-color: white;
    width: 100%;
    position: relative;
}

menu > div > ul {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    font-size: xx-large;
    gap: 5vh;
    width: 100%;
}

menu > div > ul > li {
    padding: 10px;
    /* margin-left: 50px; */
}

menu > div > img {
    width: 5vh;
    height: 5vh;
    /* border: solid black 1px; */
    display: flex;
    flex-direction: row;
    justify-self: flex-end;
    align-self: center;
    margin-right: 7vw;
}

